Fixed slider carousel touch on mobile due to z-index and improved main title readability

--- a/app/styles/components/_filters.scss
+++ b/app/styles/components/_filters.scss
@@ -1,6 +1,5 @@
 .filters-container {
-padding:15px 0 0 15px;
-
+  padding-top:15px;
 }
 .filters-container.filters-container--open {
    
